--- a/.github/workflows/rubocop.yml
+++ b/.github/workflows/rubocop.yml
@@ -12,18 +12,17 @@ jobs:
   rubocop:
     runs-on: ubuntu-latest
 
+    # https://docs.github.com/en/actions/use-cases-and-examples/building-and-testing/building-and-testing-ruby#specifying-the-ruby-version
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-
-      - name: Set up Ruby
-        uses: ruby/setup-ruby@v1
+      - name: GH Actions Checkout v4
+        uses: actions/checkout@v4
+      - name: Ruby setup
+        uses: ruby/setup-ruby@ec02537da5712d66d4d50a0f33b7eb52773b5ed1
         with:
-          ruby-version: "3.0"
-          bundler-cache: true
+          ruby-version: "3.1" # Not needed with a .ruby-version file
 
-      - name: Install dependencies
+      - name: Install w/ bundle
         run: bundle install
 
-      - name: Run RuboCop
+      - name: Run rubocop
         run: bundle exec rubocop
